--- a/build.gradle
+++ b/build.gradle
@@ -149,7 +149,11 @@ var generateModMetadata = tasks.register("generateModMetadata", ProcessResources
             mod_license            : mod_license,
             mod_version            : mod_version,
             mod_authors            : mod_authors,
-            mod_description        : mod_description
+            mod_description        : mod_description,
+            mod_credits            : mod_credits,
+            mod_url                : mod_url,
+            mod_update_url         : mod_update_url,
+            mod_logo               : mod_logo,
     ]
     inputs.properties replaceProperties
     expand replaceProperties
